test/corpus/macros.txt
================================================================================
Declarative Macros
================================================================================

#[test]
#[derive(HelloMacro)]

-------------------------------------------------------------------------------


(source_file
    (macro
    (identifier))
    (macro
        (identifier)
    (identifier)))
